--- a/PasteCat.csproj
+++ b/PasteCat.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4CF78289-0CCB-4283-BC01-A69EF8D05A67}</ProjectGuid>
+    <ProjectGuid>{7FDAE94E-9E2D-4FE1-B2B3-A2A6FE6F2CE0}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>PasteIt</RootNamespace>
-    <AssemblyName>PasteIt</AssemblyName>
+    <RootNamespace>PasteCat</RootNamespace>
+    <AssemblyName>PasteCat</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -25,7 +25,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>3</ApplicationRevision>
+    <ApplicationRevision>2</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -51,10 +51,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>3CC89ADCEFD34C91DC425C281B459776026A57FA</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>91542569DD37859F7D0192A886ACC3777DBC86C1</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>PasteIt_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>PasteCat_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -91,8 +91,6 @@
     </Compile>
     <Compile Include="Components\UserSettings.cs" />
     <Compile Include="ini.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -111,7 +109,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="packages.config" />
-    <None Include="PasteIt_TemporaryKey.pfx" />
+    <None Include="PasteCat_TemporaryKey.pfx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -121,7 +119,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\pasteIt.ico" />
+    <Resource Include="Resources\pasteCat.ico" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="Components\ContextClipboard.xaml">
